--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "ext-bcmath" : "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.5"
+        "phpunit/phpunit": ">=5.4.3-stable"
     },
     "autoload": {
         "psr-4": {
